Fixed invalid overlapping words
- Words no longer overlap incorrectly (overwriting letters of previously added words)
- Game dimensions and word count can be set when calling `start_game()`
- words are automatically highlighted on the game board upon generation (for development purposes)

--- a/cwstyle.css
+++ b/cwstyle.css
@@ -28,3 +28,15 @@ table {
 .column {
     flex: 50%;
 }
+
+.h {
+    background-color: #FFEB3B
+}
+
+.v {
+    background-color: #8BC34A
+}
+
+span {
+    width: 100%;
+}
